@@ -1,3 +1,6 @@
+8 July 2014: Matthijs
+- Implement and test retransfer behavior
+
 4 July 2014: Matthijs
 - Introduce ods-signer retransfer <zone>
 
